--- a/dev/style/_mixin.scss
+++ b/dev/style/_mixin.scss
@@ -7,8 +7,8 @@
         // src: url('../font/#{$name}.eot');
         src:
             // url('../font/#{$name}.eot?##{$name}') format('embedded-opentype'),
-            url('../font/#{$name}.woff') format('woff'),
-            url('../font/#{$name}.ttf') format('truetype'),
-            url('../font/#{$name}.svg') format('svg');
+            url('../../font/#{$name}.woff') format('woff'),
+            url('../../font/#{$name}.ttf') format('truetype');
+            // url('../font/#{$name}.svg') format('svg');
     }
 }
