--- a/dev/style/_variable.scss
+++ b/dev/style/_variable.scss
@@ -1,5 +1,6 @@
 @import "function";
 
+// color
 $symbolColor1: rgb(93, 152, 197);
 $symbolColor2: rgb(103, 78, 130);
 
@@ -31,3 +32,9 @@ $fontColor5: #d8d8d8;
 $fontColor6: #ffffff;
 $fontColor7: #6a9bcc;
 $fontColor8: #d5664d;
+
+
+// size
+$headBarHeight: 80px;
+$sideBarWidth: 100px;
+$statusBarHeight: 50px;
